--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,29 @@ body {
 }
 
 #content {
+	/*
+	fit the height of the container to the window 
+	(when you press down, it can't move the page)
+	*/
 	border: 2px solid black;
+	width: 500px;
+	margin: auto;
+	height: 500px;
 }
 
 #game-container {
-	height: 500px;
-	width: 100%;
+	/*	height: 500px;
+		width: 100%; 
+		game doesn't need to be responsive
+	*/
 }
 
 #header, #content, #footer {
 	text-align: center;
+}
+#command{
+	height: 50px;
+	width: 50px;
+	background-color: black;
+	position: relative;
 }
