--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 body {
-	margin-top: 0px;
-	margin-bottom: 0px;
-	margin-left: 10%;
-	margin-right: 10%;
+	margin:0;
+	padding: 0;
 	font-family: sans-serif;
-	background-color: 
+	background-color: #ffffff;
 }
 
 #content {
@@ -15,6 +13,7 @@ body {
 	border: 2px solid black;
 	width: 500px;
 	margin: auto;
+	margin-top: 5%;
 	height: 500px;
 }
 
